--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "axios": "^0.21.1",
+    "axios": "^1.10.0",
+    "csv-parser": "^3.2.0",
     "express": "^4.17.1",
+    "fuse.js": "^7.1.0",
+    "multer": "^2.0.1",
     "node-fetch": "^2.7.0"
   },
   "author": "",
