--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.10.0",
     "csv-parser": "^3.2.0",
+    "dotenv": "^17.2.1",
     "express": "^4.17.1",
     "fuse.js": "^7.1.0",
     "multer": "^2.0.1",
